--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,12 @@
 [package]
-authors = ["Aaron Trent <novacrazy@gmail.com>"]
 name = "trace-error"
+authors = ["Aaron Trent <novacrazy@gmail.com>"]
+description = "Extensions to Rust's error system to automatically include backtraces"
+repository = "https://github.com/novacrazy/trace-error"
+readme = "README.md"
 version = "0.1.0"
+license = "MIT"
+keywords = ["backtrace", "error", "result"]
 
 [dependencies]
 backtrace = "0.3.0"
